--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "test": "cd example && npm run test"
   },
   "dependencies": {
-    "ejs": "2.4.1",
-    "underscore": "1.8.3",
-    "underscore.string": "3.2.3",
-    "yaml-config": "0.3.0",
-    "express": "4.13.3",
-    "moment": "2.11.2",
-    "glob": "7.0.3"
+    "deepmerge": "4.2.2",
+    "ejs": "2.5.5",
+    "express": "4.17.1",
+    "glob": "7.0.3",
+    "js-yaml": "4.0.0",
+    "moment": "2.29.1",
+    "underscore": "1.12.0",
+    "underscore.string": "3.3.5"
   },
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-mocha": "2.2.0",
+    "gulp": "4.0.2",
+    "gulp-mocha": "7.0.2",
     "should": "8.2.1",
     "yargs": "3.32.0"
   }
